# Klipper-Console

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  USAGE.md  demo.sh  final_test.sh  klipper-console.sh  pyproject.toml  test_write.py
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/features/: HEATER_PIN_SUPPORT.md  IMPROVEMENTS.md  MACRO_EXECUTION.md  TAB_COMPLETION.md
docs/user-guide/: INSTALLATION.md
klipper_console/: cli.py  console_viewer.py  errors.py  parser.py  registry.py  shell.py
klipper_console/completion/: __init__.py
klipper_console/handlers/: __init__.py
klipper_console/introspection/: engine.py
klipper_console/models/: __init__.py
klipper_console/moonraker/: __init__.py  client.py  websocket_client.py
klipper_console/render/: __init__.py
scripts/: install.sh  klipper-console-moonraker.conf  moonraker-update-snippet.txt
scripts/dev/: final_test.sh
scripts/examples/: demo.sh
tests/integration/: test_live.py
tests/unit/: test_completion.py
